# Druckarchiv

./: .gitignore  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.js
design-lab/: QUIET_MATERIAL_SPEC.md  README.md  app.js  index.html  styles.css
docs/: ARCHITECTURE.md
scripts/: create-update-manifest.mjs  privacy-check.mjs
src/: app.js  demo-archive.js  favorites.js  file-selection.js  folder-covers.js  i18n.js  kpi-settings.js  library-availability.js  library-controls.js  library-mutations.js  library-navigation.js  library-roots.js  library-settings.js  model-card.js  pagination.js  preview-style.js  project-browser.js  project-grid-pagination.js  quiet-material-tokens.css  quiet-material-typography.css  slicer-preferences.js  source-browser.js  styles.css  theme-preferences.js  update-progress.js  view-preferences.js  viewer-lifecycle.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/locales/: de.js  (+1 more)
tests/: demo-archive.test.js  favorites.test.js  file-selection.test.js  folder-covers.test.js  i18n.test.js  kpi-settings.test.js  library-availability.test.js  library-controls.test.js  library-mutations.test.js  library-navigation.test.js  library-roots.test.js  library-settings.test.js  model-card.test.js  pagination.test.js  preview-style.test.js  project-browser.test.js  project-grid-pagination.test.js  quiet-material-navigation.test.js  quiet-material-tokens.test.js  slicer-preferences.test.js  source-browser.test.js  theme-preferences.test.js  update-manifest.test.js  update-progress.test.js  view-preferences.test.js  viewer-lifecycle.test.js
(+3 files in other folders)
