[package]
name = "druckarchiv"
version = "0.1.0"
description = "Lokale, private Bibliothek für 3D-Druck-Dateien"
authors = ["Druckarchiv Contributors"]
edition = "2021"

[lib]
name = "druckarchiv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

