[package]
name = "druckarchiv"
version = "0.6.0-beta.6"
description = "Lokale, private Bibliothek für 3D-Druck-Dateien"
authors = ["JaKeDEVEL"]
edition = "2021"
license-file = "../LICENSE"

[lib]
name = "druckarchiv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
