[package]
name = "druckarchiv"
version = "1.0.0-rc.1"
description = "Lokale, private Bibliothek für 3D-Druck-Dateien"
authors = ["JaKeDEVEL"]
edition = "2021"
license-file = "../LICENSE"

[lib]
name = "druckarchiv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.3.1"
trash = "=5.2.6"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"
